# IBKeymaster

./: .gitignore  CMakeLists.txt  CMakePresets.json  IBKeyer-porting-notes.md  build_linux.sh  build_macos.sh  build_vc.bat  configure_linux.sh  configure_macos.sh  configure_vc.bat
.github/workflows/: build-artifacts.yml
IBKeymaster/: IBKeyer.cpp  IBKeyer.h  IBKeyerBackend.cpp  IBKeyerBackend.h  IBKeyerCuda.cu  IBKeyerCuda.h  IBKeyerShared.h  MetalKernel.mm
